--- a/css/style.css
+++ b/css/style.css
@@ -40,22 +40,6 @@
     }
 }
 
-/* About Me */
-.about-area {
-    display: flex;
-    margin-top: 40px;
-}
-.about-picture {
-    margin-right: 20px;
-    width: 200px;
-    object-fit: contain;
-    align-self: flex-start;
-
-}
-
-.about-paragraph {
-    flex: 1 1 auto;
-}
 
 /* Footer */
 .footer-area {
@@ -67,4 +51,22 @@
     position: fixed;
     text-align: center;
     width: 100%;
+}
+
+/* About Me */
+.about-area {
+    display: flex;
+    margin: 40px 0 80px;
+    
+}
+.about-picture {
+    margin-right: 20px;
+    width: 200px;
+    object-fit: contain;
+    align-self: flex-start;
+
+}
+
+.about-paragraph {
+    flex: 1 1 auto;
 }
