--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,26 @@
 /* Imports */
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
-* {
+/* Globals */
+
+body {
+    background-image: url("/assets/greek-vase.png");
     font-family: 'Roboto Slab', serif;
+}
+
+.content-area {
+    margin: 40px 0 120px;
+}
+
+.jumbo-container {
+    border: 1px solid #39393A;
+}
+
+.content-title {
+    border-bottom: 3px solid #39393A;
+    margin-bottom: 30px;
+    padding-bottom: 30px;
 }
 
 /* Navbar */
@@ -19,6 +37,10 @@
 
 .right-align {
     justify-content: flex-end;
+}
+
+.nav-item:not(:first-child) {
+    margin-left: 20px;
 }
 
 @media screen and (max-width: 992px) {
@@ -38,6 +60,10 @@
     .logo, .right-align {
         width: 100vw;   
     }
+
+    .nav-item:not(:first-child) {
+        margin: 0;
+    }
 }
 
 
@@ -47,26 +73,65 @@
     border-top: 10px solid #7BDFF2;
     bottom: 0;
     color: #fff;
-    padding: 10px;
+    font-family: 'Lato', sans-serif;
+    font-size: .8em;
+    padding: 20px;
     position: fixed;
     text-align: center;
     width: 100%;
 }
 
 /* About Me */
-.about-area {
+
+.about-content-container {
     display: flex;
-    margin: 40px 0 80px;
-    
 }
+
 .about-picture {
+    height: 200px;
     margin-right: 20px;
     width: 200px;
-    object-fit: contain;
-    align-self: flex-start;
-
 }
 
-.about-paragraph {
-    flex: 1 1 auto;
+.about-paragraph-container {
+    font-family: 'Lato', sans-serif;
+}
+
+/* Cards */
+
+.card {
+    margin: 30px 0;
+    position: relative;
+}
+
+.card-body {
+    bottom: 0;
+    background-color: #7BDFF2;
+    color: #fff;
+    margin-bottom: 20px;
+    padding: 10px 0 0 0;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+}
+
+/* Contact */
+.contact-field {
+    font-family: 'Lato', sans-serif;
+}
+
+.contact-title {
+    font-size: 1.3em;
+    color: #606060;
+}
+
+.contact-textarea {
+    min-height: 200px;
+}
+
+.contact-btn {
+    background-color: #7BDFF2;
+    border-radius: 2px;
+    border: 1px solid #7BDFF2;
+    padding: 5px 30px;
 }
