--- a/css/style.css
+++ b/css/style.css
@@ -83,14 +83,11 @@ body {
 
 /* About Me */
 
-.about-content-container {
-    display: flex;
-}
-
 .about-picture {
     height: 200px;
     margin-right: 20px;
     width: 200px;
+    float: left;
 }
 
 .about-paragraph-container {
@@ -131,7 +128,12 @@ body {
 
 .contact-btn {
     background-color: #7BDFF2;
-    border-radius: 2px;
     border: 1px solid #7BDFF2;
+    border-radius: 2px;
     padding: 5px 30px;
+}
+
+.contact-btn:hover, .contact-btn:focus {
+    background-color: #90D7FF;
+    border: 1px solid #90D7FF;
 }
