--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -164,6 +164,19 @@ body {
             background-color: transparent;
             font-size: 20px;
             padding: 0;
+
+            .social-link {
+                @include padding(x, 4px);
+                border-radius: 2px;
+                color: #fff;
+
+                &:hover {
+                    background-color: $color-secondary;
+                    color: $color-primary;
+                }
+            }
+
+            
         }
     }
 
